--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.43",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.2.4",
+        "ant-design-vue": "^4.2.6",
+        "dayjs": "^1.11.13",
+        "oh-vue-icons": "^1.0.0-rc3",
+        "sweetalert2": "^11.22.0",
+        "vue": "^3.5.16",
+        "vue-router": "^4.5.1",
+        "xlsx": "^0.18.5"
     }
 }
