--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.20",
+        "@tailwindcss/postcss": "^4.1.10",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "daisyui": "^5.0.43",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^4.1.10",
         "vite": "^6.0.11"
     },
     "dependencies": {
